# CodeCategorize

./: .gitignore  CMakeLists.txt  CodeCategorize.leo  SConstruct
sources/: CMakeLists.txt  constraints.cc  count-all-solutions.cc  count-solutions.cc  operator_space.cc  utilities.cc
sources/common/: CMakeLists.txt  column_pauli_sets.cc  commutator.cc  constrained_operator_space.cc  constraints.cc  operator_space.cc  utilities.cc
sources/common/constraints/: XZY_ordered.cc  column_ordered.cc  first_column_XZ.cc  minimal_weight.cc  non_trivial.cc  row_ordered.cc  special_case_XZ.cc
sources/programs/: CMakeLists.txt  count-all-solutions.cc  count-solutions.cc  print-solutions.cc  scan-solutions.cc  scan.cc
tests/: CMakeLists.txt  column_pauli_sets.cc  commutator.cc  constraint_interactions.cc  constraints.cc  operator_space.cc  test_utils.cc  test_utils.hh  test_utils_tests.cc
tests/constraints/: XZY_ordered.cc  column_ordered.cc  commutator.cc  first_column_XZ.cc  interactions.cc  interactions.hh  minimal_weight.cc  non_trivial.cc  row_ordered.cc  special_case_XZ.cc
tests/constraints/commutation/: AntiCommutatorCountMinusLastOrdered-AntiCommutatorLastOperatorSequenceOrdered.cc  AntiCommutatorCountMinusLastOrdered-AntiCommutatorQubitCountSequenceOrdered.cc  AntiCommutatorCountMinusLastOrdered-FirstColumnXRowOrdered.cc  AntiCommutatorCountMinusLastOrdered-PauliGroupsRowOrdered.cc  AntiCommutatorCountMinusLastOrdered-WeightRowOrdered.cc  AntiCommutatorCountOrdered-AntiCommutatorCountMinusLastOrdered.cc  AntiCommutatorCountOrdered-AntiCommutatorLastOperatorSequenceOrdered.cc  AntiCommutatorCountOrdered-AntiCommutatorQubitCountSequenceOrdered.cc  AntiCommutatorCountOrdered-FirstColumnXRowOrdered.cc  AntiCommutatorCountOrdered-PauliGroupsRowOrdered.cc  AntiCommutatorCountOrdered-WeightRowOrdered.cc  AntiCommutatorLastOperatorSequenceOrdered-FirstColumnXRowOrdered.cc  AntiCommutatorLastOperatorSequenceOrdered-PauliGroupsRowOrdered.cc  AntiCommutatorLastOperatorSequenceOrdered-WeightRowOrdered.cc  AntiCommutatorQubitCountSequenceOrdered-AntiCommutatorLastOperatorSequenceOrdered.cc  AntiCommutatorQubitCountSequenceOrdered-FirstColumnXRowOrdered.cc  AntiCommutatorQubitCountSequenceOrdered-PauliGroupsRowOrdered.cc  AntiCommutatorQubitCountSequenceOrdered-WeightRowOrdered.cc  CMakeLists.txt  FirstColumnXRowOrdered-PauliGroupsRowOrdered.cc  FirstColumnXRowOrdered-WeightRowOrdered.cc  PauliGroupsRowOrdered-WeightRowOrdered.cc  make-commutation-tests.py
tests/constraints/commutation-compatibility/: CMakeLists.txt  ColumnOrdered-AntiCommutatorCountMinusLastOrdered-AntiCommutatorLastOperatorSequenceOrdered.cc  ColumnOrdered-AntiCommutatorCountMinusLastOrdered-AntiCommutatorQubitCountSequenceOrdered.cc  ColumnOrdered-AntiCommutatorCountMinusLastOrdered-FirstColumnXRowOrdered.cc  ColumnOrdered-AntiCommutatorCountMinusLastOrdered-PauliGroupsRowOrdered.cc  ColumnOrdered-AntiCommutatorCountMinusLastOrdered-WeightRowOrdered.cc  ColumnOrdered-AntiCommutatorCountOrdered-AntiCommutatorCountMinusLastOrdered.cc  ColumnOrdered-AntiCommutatorCountOrdered-AntiCommutatorLastOperatorSequenceOrdered.cc  ColumnOrdered-AntiCommutatorCountOrdered-AntiCommutatorQubitCountSequenceOrdered.cc  ColumnOrdered-AntiCommutatorCountOrdered-FirstColumnXRowOrdered.cc  ColumnOrdered-AntiCommutatorCountOrdered-PauliGroupsRowOrdered.cc  ColumnOrdered-AntiCommutatorCountOrdered-WeightRowOrdered.cc  ColumnOrdered-AntiCommutatorLastOperatorSequenceOrdered-FirstColumnXRowOrdered.cc  ColumnOrdered-AntiCommutatorLastOperatorSequenceOrdered-PauliGroupsRowOrdered.cc  ColumnOrdered-AntiCommutatorLastOperatorSequenceOrdered-WeightRowOrdered.cc  ColumnOrdered-AntiCommutatorQubitCountSequenceOrdered-AntiCommutatorLastOperatorSequenceOrdered.cc  ColumnOrdered-AntiCommutatorQubitCountSequenceOrdered-FirstColumnXRowOrdered.cc  ColumnOrdered-AntiCommutatorQubitCountSequenceOrdered-PauliGroupsRowOrdered.cc  ColumnOrdered-AntiCommutatorQubitCountSequenceOrdered-WeightRowOrdered.cc  ColumnOrdered-FirstColumnXRowOrdered-PauliGroupsRowOrdered.cc  ColumnOrdered-FirstColumnXRowOrdered-WeightRowOrdered.cc  ColumnOrdered-PauliGroupsRowOrdered-WeightRowOrdered.cc  FirstColumnXZ-AntiCommutatorCountMinusLastOrdered-AntiCommutatorLastOperatorSequenceOrdered.cc  FirstColumnXZ-AntiCommutatorCountMinusLastOrdered-AntiCommutatorQubitCountSequenceOrdered.cc  FirstColumnXZ-AntiCommutatorCountMinusLastOrdered-FirstColumnXRowOrdered.cc  FirstColumnXZ-AntiCommutatorCountMinusLastOrdered-PauliGroupsRowOrdered.cc  FirstColumnXZ-AntiCommutatorCountMinusLastOrdered-WeightRowOrdered.cc  FirstColumnXZ-AntiCommutatorCountOrdered-AntiCommutatorCountMinusLastOrdered.cc  FirstColumnXZ-AntiCommutatorCountOrdered-AntiCommutatorLastOperatorSequenceOrdered.cc  FirstColumnXZ-AntiCommutatorCountOrdered-AntiCommutatorQubitCountSequenceOrdered.cc  FirstColumnXZ-AntiCommutatorCountOrdered-FirstColumnXRowOrdered.cc  FirstColumnXZ-AntiCommutatorCountOrdered-PauliGroupsRowOrdered.cc  FirstColumnXZ-AntiCommutatorCountOrdered-WeightRowOrdered.cc  FirstColumnXZ-AntiCommutatorLastOperatorSequenceOrdered-FirstColumnXRowOrdered.cc  FirstColumnXZ-AntiCommutatorLastOperatorSequenceOrdered-PauliGroupsRowOrdered.cc  FirstColumnXZ-AntiCommutatorLastOperatorSequenceOrdered-WeightRowOrdered.cc  FirstColumnXZ-AntiCommutatorQubitCountSequenceOrdered-AntiCommutatorLastOperatorSequenceOrdered.cc  FirstColumnXZ-AntiCommutatorQubitCountSequenceOrdered-FirstColumnXRowOrdered.cc  FirstColumnXZ-AntiCommutatorQubitCountSequenceOrdered-PauliGroupsRowOrdered.cc  FirstColumnXZ-AntiCommutatorQubitCountSequenceOrdered-WeightRowOrdered.cc  (+88 more)
tests/constraints/compatibility/: AntiCommutatorCountMinusLastOrdered-ColumnOrdered.cc  AntiCommutatorCountMinusLastOrdered-FirstColumnXZ.cc  AntiCommutatorCountMinusLastOrdered-MinimalWeight.cc  AntiCommutatorCountMinusLastOrdered-NonTrivial.cc  AntiCommutatorCountMinusLastOrdered-SpecialCaseXZConstrained.cc  AntiCommutatorCountMinusLastOrdered-XZYOrdered.cc  AntiCommutatorCountOrdered-ColumnOrdered.cc  AntiCommutatorCountOrdered-FirstColumnXZ.cc  CMakeLists.txt  (+58 more)
(+43 files in other folders)
