#@+leo-ver=5-thin
#@+node:gcross.20101123222425.2239: * @thin CMakeLists.txt
add_library(CodeCategorize
    "column_pauli_sets.cc"
    "commutator.cc"
    "constrained_operator_space.cc"
    "constraints/column_ordered.cc"
    "constraints/first_column_XZ.cc"
    "constraints/minimal_weight.cc"
    "constraints/non_trivial.cc"
    "constraints/row_ordered.cc"
    "constraints/row_ordered/anti_commutator_count.cc"
    "constraints/row_ordered/anti_commutator_count_minus_last.cc"
    "constraints/row_ordered/anti_commutator_last_operator_sequence.cc"
    "constraints/row_ordered/anti_commutator_qubit_count_sequence.cc"
    "constraints/row_ordered/first_column.cc"
    "constraints/row_ordered/pauli_groups.cc"
    "constraints/row_ordered/weight.cc"
    "constraints/row_ordered/weight_and_first_column.cc"
    "constraints/special_case_XZ.cc"
    "constraints/XZY_ordered.cc"
    "operator_space.cc"
    "utilities.cc"
)
target_link_libraries(CodeCategorize
    gecodesearch
    gecodeint
    gecodeset
    gecodekernel
    gecodesupport
    gecodeminimodel
)
#@-leo
